--- a/packages/react/src/recipes/FeaturePreviewLPs/FeaturePreviewLevelTwo/FeaturePreviewLevelTwo.module.css
+++ b/packages/react/src/recipes/FeaturePreviewLPs/FeaturePreviewLevelTwo/FeaturePreviewLevelTwo.module.css
@@ -17,6 +17,12 @@
   }
 }
 
+.FeaturePreview__heroBg {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right center;
+}
+
 .FeaturePreview__heroImageContainer {
   background-repeat: no-repeat;
   background-size: cover;
