Adjust Bento images

--- a/packages/react/src/Bento/Bento.module.css
+++ b/packages/react/src/Bento/Bento.module.css
@@ -150,9 +150,12 @@
 }
 
 .Bento--padding-condensed > img,
-.Bento--padding-normal > img,
-.Bento--padding-spacious > img {
+.Bento--padding-normal > img {
   border-radius: var(--brand-borderRadius-large);
+}
+
+.Bento--padding-spacious > img {
+  border-radius: var(--brand-borderRadius-medium);
 }
 
 /* Bento Flow */
