--- a/packages/react/src/Box/Box.module.css
+++ b/packages/react/src/Box/Box.module.css
@@ -2685,6 +2685,10 @@
   border-radius: var(--brand-borderRadius-large);
 }
 
+.Box-borderRadius--xlarge {
+  border-radius: var(--brand-borderRadius-xlarge);
+}
+
 .Box-borderRadius--full {
   border-radius: var(--brand-borderRadius-full);
 }
