--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -3,8 +3,7 @@
   text-decoration: none;
   color: var(--brand-color-text-default);
   background-color: var(--brand-Card-background-default);
-  /* Temporary values until a new scale is defined https://github.com/github/primer/issues/2607 */
-  border-radius: var(--base-size-16);
+  border-radius: var(--brand-borderRadius-large);
   padding: var(--base-size-32);
   transition: transform var(--brand-Card-animation-duration) var(--brand-Card-animation-easing);
   display: grid;
@@ -73,8 +72,7 @@
 
 .Card__image {
   margin-bottom: var(--base-size-28);
-  /* Temporary values until a new scale is defined https://github.com/github/primer/issues/2607 */
-  border-radius: var(--base-size-8);
+  border-radius: var(--brand-borderRadius-medium);
   overflow: hidden;
   grid-area: image;
 }
