--- a/packages/react/src/Prose/Prose.module.css
+++ b/packages/react/src/Prose/Prose.module.css
@@ -220,20 +220,43 @@
 
 .Prose blockquote {
   --spacing: var(--brand-Prose-blockquote-spacing);
-  font-size: var(--brand-Testimonial-quote-fontSize-default);
-  font-weight: var(--brand-Testimonial-quote-fontWeight-default);
-  letter-spacing: var(--brand-Testimonial-quote-letterSpacing-default);
-  line-height: 1.2;
   position: relative;
+  font-size: var(--brand-text-size-400);
+  line-height: var(--brand-text-lineHeight-400);
   padding-top: var(--base-size-48);
+  padding-left: var(--base-size-40);
+  padding-bottom: var(--base-size-8);
   margin-bottom: var(--spacing);
 }
 
 .Prose blockquote::before {
   content: '“';
   font-size: var(--base-size-48);
-  font-weight: var(--base-text-weight-extrabold);
-  line-height: var(--base-size-48);
+  font-weight: var(--brand-text-weight-1000);
+  line-height: var(--base-size-64);
   position: absolute;
   top: 0;
+}
+
+.Prose blockquote::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: var(--brand-borderWidth-thick);
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--base-color-scale-indigo-5);
+  background-image: linear-gradient(
+    180deg,
+    var(--base-color-scale-blue-5) 0.87%,
+    var(--base-color-scale-purple-5) 75.12%
+  );
+}
+
+.Prose figcaption {
+  font-family: var(--brand-fontStack-monospace);
+  font-size: var(--brand-text-size-100);
+  line-height: var(--brand-text-lineHeight-100);
+  color: var(--brand-color-text-muted);
 }
