--- a/packages/react/src/AnchorNav/AnchorNav.module.css
+++ b/packages/react/src/AnchorNav/AnchorNav.module.css
@@ -45,11 +45,14 @@
 
 .AnchorNav--hide-until-sticky:not(.AnchorNav--stuck) {
   opacity: 0;
-  transition: opacity var(--brand-animation-duration-default) var(--brand-animation-easing-default);
+  visibility: hidden;
+  transition: visibility var(--brand-animation-duration-default) var(--brand-animation-easing-default),
+    opacity var(--brand-animation-duration-default) var(--brand-animation-easing-default);
 }
 
 .AnchorNav--hide-until-sticky.AnchorNav--stuck {
   opacity: 1;
+  visibility: visible;
 }
 
 .AnchorNav--with-default-background-color {
@@ -58,7 +61,7 @@
 
 .AnchorNav--stuck {
   box-shadow: 0 3px 6px rgba(140, 149, 159, 0.15), 0 1px 1px rgba(0, 0, 0, 0.1); /* TODO: replace with a global token */
-  position: fixed;
+  position: sticky;
 }
 
 .AnchorNav--expanded {
