--- a/packages/react/src/Accordion/Accordion.module.css
+++ b/packages/react/src/Accordion/Accordion.module.css
@@ -1,6 +1,7 @@
 .Accordion {
   box-sizing: border-box;
   position: relative;
+  background: var(--color-scale-blue-0);
 }
 
 .Accordion--default {
