--- a/packages/react/src/Grid/Grid.module.css
+++ b/packages/react/src/Grid/Grid.module.css
@@ -27,7 +27,8 @@
 }
 
 .Grid--has-overlay .Grid__column {
-  background-color: var(--brand-Grid-column-bgColor-overlay);
+  /* background-color: var(--brand-Grid-column-bgColor-overlay); */
+  background-color: var(--brand-color-neutral-muted);
   min-height: var(--base-size-24);
 }
 
