--- a/packages/react/src/AnchorNav/AnchorNav.module.css
+++ b/packages/react/src/AnchorNav/AnchorNav.module.css
@@ -1,6 +1,6 @@
 /*
  * AnchorNav
- * 
+ *
  * 1. Globals
  * 2. AnchorNav root and inner bounding containers
  * 3. AnchorNav links
@@ -319,7 +319,8 @@
     width: 100%;
     height: 100vh; /* Keep as fallback */
     height: 100dvh;
-    background: hsla(var(--base-color-scale-black-0-hsl) / 0.5);
+    /* replace with overlay-backdrop-bgColor */
+    background: #8c959f33;
     transform: translateZ(-1px);
     animation: fade-in 0.5s;
     animation-timing-function: var(--brand-animation-easing-glide);
